// src/app/models/staff.model.ts

export interface Staff {
    id: string;
    licenseNumber: string;
  }
  